alon-bot-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    some-label: some-label-value
spec:
  containers:
  - name: jnlp
    image: jenkins/inbound-agent:latest
    imagePullPolicy: Always
    resources:
      limits:
        cpu: 500m
        memory: 512Mi
      requests:
        cpu: 500m
        memory: 512Mi
  - name: alon-bot-python-deployment
    image: kubealon/alon-bot-python
    name: alon-bot-nginx-deployment
    image: kubealon/alon-bot-nginx
