jenkins.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  containers:
  - name: jenkins
    image: jenkins/jenkins:latest
    ports:
    - containerPort: 8080
    resources:
      requests:
        memory: "512Mi"
        cpu: "100m"
      limits:
        memory: "1Gi"
        cpu: "200m"
  serviceAccount: default
