alon-bot-nginx-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: alon-bot-nginx
spec:
  selector:
    app: alon-bot-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
