alon-bot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alon-bot-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alon-bot-nginx
            port:
              number: 80
